--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
         commands:
             - echo Building the Docker image...
             - docker build -t rk57rg/docker-react -f Dockerfile.dev .
-    post-build:
+    post_build:
         commands:
             - echo running the tests
             - docker run rk57rg/docker-react npm run test -- --coverage
